Fix: incorrect usage of unmodifiable list in ProfitableOrdersController created from toList method